// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClickToCopyButton renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  display: inline-block;
}

.emotion-1 {
  background-repeat: no-repeat;
  display: inline-block;
  cursor: pointer;
}

.emotion-2 {
  vertical-align: middle;
  fill: currentColor;
}

.emotion-2 use {
  pointer-events: none;
}

<div
    class="emotion-0"
    data-cy="box"
  >
    <span
      data-cy="tooltip"
    >
      <div>
        <span
          aria-describedby="copyTooltip1"
          class="emotion-1"
          data-cy="box"
          role="button"
          tabindex="0"
        >
          <svg
            aria-label="system-clipboard icon"
            class="emotion-2"
            data-cy="icon"
            height="24"
            preserveAspectRatio="xMinYMin meet"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <use
              xlink:href="#system-clipboard"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`ClickToCopyButton renders with custom children 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-repeat: no-repeat;
  display: inline-block;
}

.emotion-1 {
  cursor: pointer;
}

<div
    class="emotion-0"
    data-cy="box"
  >
    <span
      data-cy="tooltip"
    >
      <div>
        <div
          aria-describedby="copyTooltip2"
          class="emotion-1"
          role="button"
          tabindex="0"
        >
          custom children
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;
